# esplora-rs

./: Cargo.toml  README.md  TODO.md
docs/: DESIGN.md  TODO.md
docs/plans/: 01-ergonomics-fixes.md  02-integration-and-shuttle.md  03-preload-and-readiness.md  04-waterfalls-endpoint.md  README.md
examples/: waterfalls_query.rs
src/: auth.rs  error.rs  lib.rs  models.rs
src/testdata/: address_info.json  asset.json  block.json  fee-estimates.json  mempool.json  outspends.json  transaction.json  utxos.json  waterfalls_v2.json
